[metadata]
name = xcatplay
summary = A set of Ansible playbooks that automates the task of using xcat.
description-file =
    README.rst
author = longcheng
author-email = chenglch@cn.ibm.com
home-page = http://xcat-docs.readthedocs.io/en/latest/
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7

[files]
packages =
    xcatplay
